--- a/botconfig.ini
+++ b/botconfig.ini
@@ -1,9 +1,9 @@
 [Settings]
 #Set this value to the token of your bot
-Token = MTc3NTY4NDY0NTAyNzg0MDAw.ChfT1g.vY5i6l3yuKh1xxBEMpRisdqDdDE
+Token = 
 
 #Set this value to a comma seperated list of user ID's, ex: Operators = 1111111111111111, 2222222222222222222222, 3333333333333333333
-Operators = 129757604506370048, 130516118103130113
+Operators = 
 
 #Set this value to a comma seperated list of user ID's, ex: Banned = 1111111111111111, 2222222222222222222222, 3333333333333333333
 Banned = 
