Updated bot config template

--- a/botconfigtemplate.ini
+++ b/botconfigtemplate.ini
@@ -7,3 +7,6 @@ Operators =
 
 #Set this value to a comma seperated list of user ID's, ex: Banned = 1111111111111111, 2222222222222222222222, 3333333333333333333
 Banned = 
+
+#Set this value to a command seperated list of commands that you want to limit to operators, ex: sn, sa, skp
+OpCommands = 
